# openterface

./: .envrc  .gitignore  CMakeLists.txt  FEATURES.md  PROGRESS.md  README.md  test_build.sh  test_responsive.sh
examples/: main.cpp  test_gui.cpp
include/openterface/: cli.hpp  gpu_video_renderer.hpp  gui.hpp  gui_input.hpp  gui_threading.hpp  gui_video.hpp  gui_wayland.hpp  input.hpp  jpeg_decoder.hpp  kvm.hpp  serial.hpp  video.hpp
src/: cli.cpp  gpu_video_renderer.cpp  gui.cpp  gui_input.cpp  gui_threading.cpp  gui_video.cpp  gui_wayland.cpp  input.cpp  jpeg_decoder.cpp  kvm.cpp  serial.cpp  video.cpp
